--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,18 @@ hr{
 	width: 1090px;
 	/*font-size: 24px;*/
 }
+.visually-hidden:not(:focus):not(:active) {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    margin: -1px;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+}
 
 
 /*header*/
@@ -302,4 +314,36 @@ h1 + hr{
 	font-size: 18px;
 	line-height: 36px;
 	font-weight: bold;
+}
+
+
+
+
+/*statistics*/
+
+.statistics{
+	background-color: #95e1d3;
+	color: #fff;
+	height: 270px;
+}
+.statistics .container{
+	height: 100%;
+}
+.statistics ul{
+	display: flex;
+	height: 100%;
+}
+.statistics ul li{
+	flex-grow: 1;
+	font-size: 14px;
+	text-transform: uppercase;
+	border-left: 1px solid rgba(255,255,255,0.3);
+}
+.statistics ul li:last-child{
+	border-right: 1px solid rgba(255,255,255,0.3);
+}
+.statistics ul li span{
+	font-size: 72px;
+	font-weight: bold;
+	line-height: 1.4;
 }
