--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,12 @@ h2{
 	font-weight: bold;
 	text-transform: uppercase;
 }
-hr{
-	margin: 38px 0;
+h2::after{
+	content: "";
+	display: block;
+	margin: 38px auto;
 	width: 60px;
 	height: 3px;
-	border: none;
     background-color: #f38181;
 }
 .title-description{
@@ -203,8 +204,12 @@ h1{
 	color: #fff;
 	line-height: 1;
 }
-h1 + hr{
-	margin: 50px 0;
+h1::after{
+	content: "";
+	display: block;
+	margin: 50px auto;
+	width: 60px;
+	height: 3px;
     background-color: #fff;
 }
 .intro .btn{
