--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /*font-family: 'Kaushan Script', cursive;
 font-family: 'Montserrat', sans-serif;*/
 
+/*@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");*/
+
+
 /*reset*/
 
 *,
@@ -721,20 +724,18 @@ h1 + .line{
 .gallery2 figure .overlay .social-wrap a + a{
 	margin-left: 1px;
 }
+.gallery2 figure .overlay .social-wrap a::before{
+	display: block;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	line-height: 56px;
+	font-size: 24px;
+	color: #f38181;
+}
 .gallery2 figure .overlay .social-wrap a:hover{
 	background: #f38181;
 }
-.gallery2 figure .overlay .social-wrap a::before{
-	position: absolute;
-	display: block;
-	top: 50%;
-	left: 50%;
-	width: 26px;
-	height: 26px;
-	font-size: 15px;
-	
+.gallery2 figure .overlay .social-wrap a:hover::before{
+	color: #fff;
 }
-/*.gallery2 figure .overlay .social-wrap a.facebook::before{
-	content: "\f39e";
-	
-}*/
