--- a/css/style.css
+++ b/css/style.css
@@ -720,6 +720,7 @@ h1 + .line{
 	display: block;
 	background: #fce38a;
 	position: relative;
+	transition: background .2s linear;
 }
 .gallery2 figure .overlay .social-wrap a + a{
 	margin-left: 1px;
@@ -732,6 +733,7 @@ h1 + .line{
 	line-height: 56px;
 	font-size: 24px;
 	color: #f38181;
+	transition: color .2s linear;
 }
 .gallery2 figure .overlay .social-wrap a:hover{
 	background: #f38181;
