--- a/css/style.css
+++ b/css/style.css
@@ -149,10 +149,12 @@ nav ul{
 	display: flex;
 	justify-content: space-between;
 }
+nav ul li{
+	position: relative;
+}
 nav ul li a{
 	color: #fff;
-	padding: 10px 2px 7px;
-	display: inline-block;
+	line-height: 40px;
 }
 nav ul li:hover a,
 nav ul li.active a
@@ -162,6 +164,7 @@ nav ul li.active a
 }
 nav ul li::after{
 	content: "";
+	position: absolute;
 	display: block;
 	width: 100%;
 	height: 3px;
@@ -175,13 +178,13 @@ nav ul li.active::after
 	opacity: 1;
 	background-color: #fce38a;
 }
-.user-button{
+.user-buttons{
 	margin-left: 50px;
 	width: 76px;
 	display: flex;
 	justify-content: space-between;
 }
-.user-button button{
+.user-buttons button{
 	font-size: 0;
 	width: 18px;
 	height: 18px;
