--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,6 @@ nav ul li.active::after
 .statistics{
 	background-color: #95e1d3;
 	color: #fff;
-	height: 270px;
 }
 .statistics .container{
 	height: 100%;
@@ -379,6 +378,8 @@ nav ul li.active::after
 }
 .statistics ul li{
 	flex: 1 1 0;
+	padding-top: 60px;
+    padding-bottom: 70px;
 	font-size: 14px;
 	text-transform: uppercase;
 	border-left: 1px solid rgba(255,255,255,0.3);
@@ -1285,7 +1286,16 @@ form.subscribe .input::placeholder {
 		font-size: 80px;
 	}
 
-}
+	/*statistics*/
+	.statistics ul{
+		flex-wrap: wrap;
+	}
+	.statistics ul li {
+	    flex: 1 1 250px;
+	    border: none !important;
+	    padding-top: 30px;
+	    padding-bottom: 40px;
+	}
 
 @media (max-width: 770px){
 	
@@ -1317,6 +1327,11 @@ form.subscribe .input::placeholder {
 		row-gap: 15px;
 		flex-direction: column;
 		align-items: center;
+	}
+
+	/*statistics*/
+	.statistics ul li {
+	    flex: 1 1 186px;
 	}
 }
 
@@ -1353,6 +1368,10 @@ form.subscribe .input::placeholder {
 	}
 	.slider ul li+li {
 	    margin-left: 20px;
+	}
+	/*statistics*/
+	.statistics ul li span{
+	    font-size: 52px;
 	}
 }
 
